--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@
 title: Q3aN 的博客
 email: quan3969@qq.com
 description: >- # this means to ignore newlines until "baseurl:"
-  欢迎访问 Q3aN 的个人博客。
+  长风破浪会有时
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: jekyllrb
