--- a/_config.yml
+++ b/_config.yml
@@ -20,12 +20,25 @@
 
 title: Q3aN 的博客
 email: quan3969@qq.com
+author:
+  name: Jason Zheng
+  email: quan3969@qq.com
 description: >- # this means to ignore newlines until "baseurl:"
   长风破浪会有时
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: jekyllrb
 github_username: quan3969
+
+# Minima date format
+# refer to https://shopify.github.io/liquid/filters/date/ if you want to customize this
+minima:
+  date_format: "%b %-d, %Y"
+  skin: solarized-dark
+
+# generate social links in footer
+social_links:
+  github:  jekyll
 
 # Build settings
 theme: minima
