--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,7 @@ github_username: quan3969
 # refer to https://shopify.github.io/liquid/filters/date/ if you want to customize this
 minima:
   date_format: "%b %-d, %Y"
-  skin: solarized
+  skin: classic
   # generate social links in footer
   social_links:
     github:  quan3969
